# HU_ML_EX_2

./: Makefile  pyproject.toml  setup.py
docs/: conf.py
les5/: README.md
les5/docs/: Makefile  index.rst  make.bat
les5/src/data/: data_tools.py  make_dataset.py
notebooks/: EEG copy 2.ipynb  EEG.ipynb  eeg_2.ipynb
src/data/: data_tools.py  make_dataset.py
