[tool.poetry]
name = "les5"
version = "0.1.0"
description = ""
authors = ["Isabel <isabel_meijer@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
cookiecutter = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
